<resources>
    <string name="app_name">Door Remote</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_register">Register</string>
    <string name="token_text_is_null">Please enter a token!</string>
    <string name="mac_phone_error">Couldn\'t find mac address or phone number!</string>
    <string name="phonenumber_error">Couldn\'t find phone number!</string>
    <string name="return_key_error">Registration Error!</string>
    <string name="delete_registration">Delete Registration</string>
    <string name="success">Success</string>
    <string name="connection_error">Could not connect to server!</string>
    <string name="storing_key_error">Error storing key!</string>
    <string name="cooldown">Please wait before sending another request</string>
    <string name="encryption_error">Error encrypting string</string>
    <string name="relay_return_error">No door access!</string>
    <string name="door_open_success">Door successfully unlocked</string>
    <string name="door_open_failure">Failed to unlock door</string>
    <string name="copyright">\u00A9 Tripp\'n Technology, LLC 2015</string>
    <string name="register_string">Register</string>
    <string name="enter_token_string">Enter token</string>
    <string name="progress_title_register">Registering</string>
    <string name="progress_title_main">Retrieving doors</string>
    <string name="progress_title_open">Unlocking door</string>
    <string name="alert_title">Confirm</string>
    <string name="alert_message">Are you sure you want to delete the registration?

        This cannot be undone</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="retry_message">Would you like to try to reconnect?</string>
    <string name="unknown_error">An unknown error has occurred.
        Please reload the app and try again</string>
    <string name="url">http://10.0.0.63:12345</string>
    <string name="newDoorsTitle">New doors</string>
    <string name="newDoorsMessage">There are new doors available. Would you like to display them now?</string>
</resources>
